Создано с помощью Colaboratory

--- a/Tasks/Task0.ipynb
+++ b/Tasks/Task0.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyMNXflwoRjGL7sqQrfOCEQd",
+      "authorship_tag": "ABX9TyOsUbWm9feqzDH+83RIt7tM",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -28,13 +28,25 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 1,
       "metadata": {
-        "id": "OSfROKKCx1d4"
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "OSfROKKCx1d4",
+        "outputId": "83ebff89-c51c-42c2-dea1-12c0d5d87197"
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "hello world\n"
+          ]
+        }
+      ],
       "source": [
-        "print(\"hello world\")"
+        "print('hello world')\n"
       ]
     }
   ]
