Создано с помощью Colaboratory

--- a/Tasks/module1/task1.ipynb
+++ b/Tasks/module1/task1.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyPb9L9/XomVSI7qXWpJ7nmX",
+      "authorship_tag": "ABX9TyPGweAwQCyv8KDTMA1Nb3FT",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -28,12 +28,26 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 2,
       "metadata": {
-        "id": "tN9o63oxluUW"
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "tN9o63oxluUW",
+        "outputId": "71c60c81-57ae-4175-e6fb-fab0f8c7e5fd"
       },
-      "outputs": [],
-      "source": []
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "hello world\n"
+          ]
+        }
+      ],
+      "source": [
+        "print('hello world')"
+      ]
     }
   ]
 }
