Создано с помощью Colaboratory

--- a/Tasks/module1/task1.ipynb
+++ b/Tasks/module1/task1.ipynb
@@ -1,20 +1,4 @@
 {
-  "nbformat": 4,
-  "nbformat_minor": 0,
-  "metadata": {
-    "colab": {
-      "provenance": [],
-      "authorship_tag": "ABX9TyPGweAwQCyv8KDTMA1Nb3FT",
-      "include_colab_link": true
-    },
-    "kernelspec": {
-      "name": "python3",
-      "display_name": "Python 3"
-    },
-    "language_info": {
-      "name": "python"
-    }
-  },
   "cells": [
     {
       "cell_type": "markdown",
@@ -28,26 +12,50 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 2,
+      "execution_count": 12,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "tN9o63oxluUW",
-        "outputId": "71c60c81-57ae-4175-e6fb-fab0f8c7e5fd"
+        "outputId": "3d899445-cafd-4c68-a702-3d5ac68bb444"
       },
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "hello world\n"
+            "Введите три числа:\n",
+            "1\n",
+            "2\n",
+            "3\n",
+            "сумма этих чисел равна:  6\n"
           ]
         }
       ],
       "source": [
-        "print('hello world')"
+        "print('Введите три числа:')\n",
+        "a = input()\n",
+        "b = input()\n",
+        "c = input()\n",
+        "print(\"сумма этих чисел равна: \", int(a)+int(b)+int(c))\n"
       ]
     }
-  ]
+  ],
+  "metadata": {
+    "colab": {
+      "provenance": [],
+      "authorship_tag": "ABX9TyNdKIYf3GUz/Om0L7UyRI7H",
+      "include_colab_link": true
+    },
+    "kernelspec": {
+      "display_name": "Python 3",
+      "name": "python3"
+    },
+    "language_info": {
+      "name": "python"
+    }
+  },
+  "nbformat": 4,
+  "nbformat_minor": 0
 }
