Создано с помощью Colaboratory

--- a/Tasks/module1/task1.ipynb
+++ b/Tasks/module1/task1.ipynb
@@ -12,20 +12,20 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 12,
+      "execution_count": 13,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "tN9o63oxluUW",
-        "outputId": "3d899445-cafd-4c68-a702-3d5ac68bb444"
+        "outputId": "cb1e1d9d-e00f-4e2e-c6d1-63dd77f1f758"
       },
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "Введите три числа:\n",
+            "Введите три целых числа:\n",
             "1\n",
             "2\n",
             "3\n",
@@ -34,7 +34,7 @@
         }
       ],
       "source": [
-        "print('Введите три числа:')\n",
+        "print('Введите три целых числа:')\n",
         "a = input()\n",
         "b = input()\n",
         "c = input()\n",
@@ -45,7 +45,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyNdKIYf3GUz/Om0L7UyRI7H",
+      "authorship_tag": "ABX9TyOsk91l4R/Ir8drrCgWRVeA",
       "include_colab_link": true
     },
     "kernelspec": {
