Создано с помощью Colaboratory

--- a/Tasks/Module_5.ipynb
+++ b/Tasks/Module_5.ipynb
@@ -206,7 +206,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 11,
+      "execution_count": null,
       "metadata": {
         "id": "gwRjKPfjL8dH",
         "colab": {
@@ -248,7 +248,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 27,
+      "execution_count": null,
       "metadata": {
         "id": "cv497DbAL8fr",
         "colab": {
@@ -295,7 +295,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 36,
+      "execution_count": null,
       "metadata": {
         "id": "3ReBS4FgL8iU",
         "colab": {
@@ -325,7 +325,9 @@
         "  n1 = n2\n",
         "  n2 = n3\n",
         "  pos += 1\n",
-        "print(k)\n"
+        "print(k)\n",
+        "\n",
+        "\n"
       ]
     },
     {
@@ -339,7 +341,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 50,
+      "execution_count": null,
       "metadata": {
         "id": "4EMti8CtL8ky",
         "colab": {
@@ -383,8 +385,7 @@
         "    combomax = combo\n",
         "  combo = 1\n",
         "\n",
-        "print(combomax)\n",
-        ""
+        "print(combomax)\n"
       ]
     }
   ]
