Создано с помощью Colaboratory

--- a/Tasks/Module_5.ipynb
+++ b/Tasks/Module_5.ipynb
@@ -206,7 +206,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 11,
       "metadata": {
         "id": "gwRjKPfjL8dH",
         "colab": {
@@ -248,7 +248,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 27,
       "metadata": {
         "id": "cv497DbAL8fr",
         "colab": {
@@ -295,7 +295,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 36,
       "metadata": {
         "id": "3ReBS4FgL8iU",
         "colab": {
@@ -327,6 +327,7 @@
         "  pos += 1\n",
         "print(k)\n",
         "\n",
+        "\n",
         "\n"
       ]
     },
@@ -341,7 +342,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 50,
       "metadata": {
         "id": "4EMti8CtL8ky",
         "colab": {
@@ -385,7 +386,8 @@
         "    combomax = combo\n",
         "  combo = 1\n",
         "\n",
-        "print(combomax)\n"
+        "print(combomax)\n",
+        ""
       ]
     }
   ]
