Создано с помощью Colaboratory

--- a/Tasks/Module_5.ipynb
+++ b/Tasks/Module_5.ipynb
@@ -295,13 +295,13 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 1,
       "metadata": {
         "id": "3ReBS4FgL8iU",
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "a0f99d28-9af6-45ec-86e5-d2c10c32a96b"
+        "outputId": "4fa4e413-f6de-48e8-ef64-7e22690e9c5e"
       },
       "outputs": [
         {
@@ -314,8 +314,6 @@
         }
       ],
       "source": [
-        "\n",
-        "\n",
         "n = int(input('введите целое положительное число n: '))\n",
         "pos = 0\n",
         "n1 = 0\n",
@@ -327,8 +325,7 @@
         "  n1 = n2\n",
         "  n2 = n3\n",
         "  pos += 1\n",
-        "print(k)\n",
-        "\n"
+        "print(k)"
       ]
     },
     {
