Создано с помощью Colaboratory

--- a/Tasks/Module_7.ipynb
+++ b/Tasks/Module_7.ipynb
@@ -179,7 +179,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 71,
+      "execution_count": null,
       "metadata": {
         "id": "76hJaISeOptk",
         "colab": {
@@ -244,13 +244,67 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 15,
       "metadata": {
-        "id": "xV1edOx2OpwJ"
+        "id": "xV1edOx2OpwJ",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "c1258600-6cbc-45f2-946f-e16b9ab1ad5c"
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "4\n",
+            "notepad.exe R X\n",
+            "access.log W R\n",
+            "logo.gif R\n",
+            "httpd.conf X W R\n",
+            "5\n",
+            "read logo.gif\n",
+            "write notepad.exe\n",
+            "execute logo.gif\n",
+            "read access.log\n",
+            "write access.log\n",
+            "OK\n",
+            "Denied\n",
+            "Denied\n",
+            "OK\n",
+            "OK\n"
+          ]
+        }
+      ],
       "source": [
-        "# Ваш код"
+        "n = int(input())\n",
+        "d = dict()\n",
+        "for i in range(0, n):\n",
+        "  k = input().split()\n",
+        "  d[k[0]] = k[1:]\n",
+        "m = int(input())\n",
+        "text = []\n",
+        "for i in range(0, m):\n",
+        "  o = input().split()\n",
+        "  while(d.get(o[1], 0) == 0):\n",
+        "    o = input('такого файла нет, введите команду заново').split()\n",
+        "  if o[0] == 'read':\n",
+        "    if ('R' in d[str(o[1])]) == True:\n",
+        "      text.append('OK')\n",
+        "    else:\n",
+        "      text.append('Denied')\n",
+        "  if o[0] == 'write':\n",
+        "    if ('W' in d[str(o[1])]) == True:\n",
+        "      text.append('OK')\n",
+        "    else:\n",
+        "      text.append('Denied')\n",
+        "  if o[0] == 'execute':\n",
+        "    if ('X' in d[str(o[1])]) == True:\n",
+        "      text.append('OK')\n",
+        "    else:\n",
+        "      text.append('Denied')\n",
+        "for i in range(0, len(text)):\n",
+        "  print(text[i])"
       ]
     },
     {
@@ -273,13 +327,48 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 16,
       "metadata": {
-        "id": "MSPxuo5NOpyh"
+        "id": "MSPxuo5NOpyh",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "89398239-318c-4a71-d717-e258debe8f37"
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "2\n",
+            "USA Boston Pittsburgh Washington Seattle\n",
+            "UK London Edinburgh Cardiff Belfast\n",
+            "3\n",
+            "Cardiff\n",
+            "Seattle\n",
+            "London\n",
+            "UK\n",
+            "USA\n",
+            "UK\n"
+          ]
+        }
+      ],
       "source": [
-        "# Ваш код"
+        "n = int(input())\n",
+        "d = dict()\n",
+        "for i in range(0, n):\n",
+        "  k = input().split()\n",
+        "  for q in range(1,len(k)):\n",
+        "    d[k[q]] = k[0]\n",
+        "m = int(input())\n",
+        "text = []\n",
+        "for i in range(0, m):\n",
+        "  o = input()\n",
+        "  while(d.get(o, 0) == 0):\n",
+        "    o = input('такого города нет, введите заново')\n",
+        "  text.append(d[o])\n",
+        "for i in range(0, len(text)):\n",
+        "  print(text[i])"
       ]
     },
     {
@@ -297,13 +386,57 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 43,
       "metadata": {
-        "id": "TStU6BsNOp1G"
+        "id": "TStU6BsNOp1G",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "f60b3caf-6461-4305-ec02-85c056a40345"
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "9\n",
+            "hi\n",
+            "hi\n",
+            "what is your name\n",
+            "my name is bond\n",
+            "james bond\n",
+            "my name is damme\n",
+            "van damme\n",
+            "claude van damme\n",
+            "jean claude van damme\n",
+            "damme 4\n",
+            "is 3\n",
+            "name 3\n",
+            "van 3\n",
+            "hi 2\n",
+            "my 2\n",
+            "bond 2\n",
+            "claude 2\n",
+            "what 1\n",
+            "your 1\n",
+            "james 1\n",
+            "jean 1\n"
+          ]
+        }
+      ],
       "source": [
-        "# Ваш код"
+        "n = int(input())\n",
+        "d = dict()\n",
+        "for i in range(0, n):\n",
+        "  l = input().split()\n",
+        "  for k in range(0, len(l)):\n",
+        "    if (d.get(l[k], 0)) == 0:\n",
+        "      d[l[k]] = 1\n",
+        "    else:\n",
+        "      d[l[k]] = int(d[l[k]] + 1)\n",
+        "dcopy = sorted(d.items(), key=lambda x: x[1], reverse=True)\n",
+        "for i in range(0, len(dcopy)):\n",
+        "  print(*dcopy[i], sep=' ')"
       ]
     },
     {
